--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "larswiegers/laravel-maps": "^0.18.0"
+        "larswiegers/laravel-maps": "^0.18.0",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
